--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         </div>
         <div class="partie_droite">
             <p>Become a host</p>
-            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="globe"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"d="M21 12a9 9 0 01-9 9m9-9a9 9 0 00-9-9m9 9H3m9 9a9 9 0 01-9-9m9 9c1.657 0 3-4.03 3-9s-1.343-9-3-9m0 18c-1.657 0-3-4.03-3-9s1.343-9 3-9m-9 9a9 9 0 019-9"></path></svg>
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="globe"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 12a9 9 0 01-9 9m9-9a9 9 0 00-9-9m9 9H3m9 9a9 9 0 01-9-9m9 9c1.657 0 3-4.03 3-9s-1.343-9-3-9m0 18c-1.657 0-3-4.03-3-9s1.343-9 3-9m-9 9a9 9 0 019-9"></path></svg>
             <div class="compte">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="acc"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path></svg>
-                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="acc"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"d="M5.121 17.804A13.937 13.937 0 0112 16c2.5 0 4.847.655 6.879 1.804M15 10a3 3 0 11-6 0 3 3 0 016 0zm6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="acc"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5.121 17.804A13.937 13.937 0 0112 16c2.5 0 4.847.655 6.879 1.804M15 10a3 3 0 11-6 0 3 3 0 016 0zm6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
             </div>
         </div>
     </header>
@@ -122,19 +122,19 @@
             <h1>Live Anywhere</h1>
             <div class="main3_flex">
                 <div class="liveBox">
-                    <img src="./assets/img/outdoor getaways.webp" alt="Outdoor getaways">
+                    <img src="./assets/img/outdoor_getaways.webp" alt="Outdoor_getaways">
                     <h2>Outdoor getaways</h2>
                 </div>
                 <div class="liveBox">
-                    <img src="./assets/img/unique stays.webp" alt="Unique stays">
+                    <img src="./assets/img/unique_stays.webp" alt="Unique_stays">
                     <h2>Unique stays</h2>
                 </div>
                 <div class="liveBox">
-                    <img src="./assets/img/entire homes.webp" alt="Entire homes">
+                    <img src="./assets/img/entire_homes.webp" alt="Entire_homes">
                     <h2>Entire homes</h2>
                 </div>
                 <div class="liveBox">
-                    <img src="./assets/img/pet allowed.webp" alt="pet allowed">
+                    <img src="./assets/img/pet_allowed.webp" alt="pet_allowed">
                     <h2>Pet allowed</h2>
                 </div>
             </div>
